src/objects/Apttus_Approval__Approval_Process__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Approval__StepEscalateToType__c</fullName>
        <description>The type of assignee the request will be escalated to if it is escalated at the step level.</description>
        <inlineHelpText>The type of assignee the request will be escalated to if it is escalated at the step level.</inlineHelpText>
        <label>Step Escalate To Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backup Admin User</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Related User</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Rule</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>User Approval Matrix Next Approver</fullName>
                </value>
                <value>
                    <fullName>User Delegated Approver</fullName>
                </value>
                <value>
                    <fullName>User Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepExpectedDaysToComplete__c</fullName>
        <description>The number of expected days that this approval step needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
        <inlineHelpText>The number of expected days that this approval step needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
        <label>Step Expected Days To Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepExpectedHoursToComplete__c</fullName>
        <description>The number of expected hours that this approval step needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
        <inlineHelpText>The number of expected hours that this approval step needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
        <label>Step Expected Hours To Complete</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepExpectedMinutesToComplete__c</fullName>
        <description>The number of expected minutes that this approval step needs to be completed in (approved or rejected).</description>
        <inlineHelpText>The number of expected minutes that this approval step needs to be completed in (approved or rejected).</inlineHelpText>
        <label>Step Expected Minutes To Complete</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepFilterConditionDescription__c</fullName>
        <description>Enter a description for this step filter condition</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a description for this step filter condition</inlineHelpText>
        <label>Step Filter Condition Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepFilterLogic__c</fullName>
        <description>The step criteria filter logic expression</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepKeyFieldNames__c</fullName>
        <description>The API names of the fields which comprise the key for the child object.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The API names of the fields which comprise the key for the child object.</inlineHelpText>
        <label>Step Key Field Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepLabel__c</fullName>
        <description>The step label</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the name of a custom label containing text that will be used as the label for the step</inlineHelpText>
        <label>Step Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepRemindersActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step Reminders Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSequence__c</fullName>
        <description>The step execution sequence</description>
        <label>Step Sequence</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSkipUnresolvedAssignee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this box is checked if the assignee cannot be resolved at runtime then the step will be skipped instead of getting assigned to the Backup Admin.</description>
        <inlineHelpText>When this box is checked if the assignee cannot be resolved at runtime then the step will be skipped instead of getting assigned to the Backup Admin.</inlineHelpText>
        <label>Step Skip Unresolved Assignee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSubmissionComment1Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this to enable submission comment 1 for this step. When enabled, the user will be prompted to enter submission comment 1 using the submission comment 1 label when the request is submitted for approval.</description>
        <inlineHelpText>Select this to enable submission comment 1 for this step. When enabled, the user will be prompted to enter submission comment 1 using the submission comment 1 label when the request is submitted for approval.</inlineHelpText>
        <label>Step Submission Comment 1 Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSubmissionComment2Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this to enable submission comment 2 for this step. When enabled, the user will be prompted to enter submission comment 2 using the submission comment 2 label when the request is submitted for approval.</description>
        <inlineHelpText>Select this to enable submission comment 2 for this step. When enabled, the user will be prompted to enter submission comment 2 using the submission comment 2 label when the request is submitted for approval.</inlineHelpText>
        <label>Step Submission Comment 2 Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSubmissionComment3Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this to enable submission comment 3 for this step. When enabled, the user will be prompted to enter submission comment 3 using the submission comment 3 label when the request is submitted for approval.</description>
        <inlineHelpText>Select this to enable submission comment 3 for this step. When enabled, the user will be prompted to enter submission comment 3 using the submission comment 3 label when the request is submitted for approval.</inlineHelpText>
        <label>Step Submission Comment 3 Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSubmissionCommentsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this to enable submission comments at step level. When enabled at step level, the user will be prompted to enter one or more comments for this step when the request is submitted for approval.</description>
        <inlineHelpText>Select this to enable submission comments at step level. When enabled at step level, the user will be prompted to enter one or more comments for this step when the request is submitted for approval.</inlineHelpText>
        <label>Step Submission Comments Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepType__c</fullName>
        <description>The Step Type</description>
        <inlineHelpText>The Step Type</inlineHelpText>
        <label>Step Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Subprocess</fullName>
                </value>
                <value>
                    <fullName>Child Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Step Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Approver_Type__c</fullName>
        <label>Step Approver Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approver 1</fullName>
                </value>
                <value>
                    <fullName>Approver 2</fullName>
                </value>
                <value>
                    <fullName>Approver 3</fullName>
                </value>
                <value>
                    <fullName>Approver 4</fullName>
                </value>
                <value>
                    <fullName>Approver 5</fullName>
                </value>
                <value>
                    <fullName>Approver 6</fullName>
                </value>
                <value>
                    <fullName>Unspecified</fullName>
                    <default>true</default>
                    <label>Unspecified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Assignee_Description__c</fullName>
        <description>The step assignee description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Assignee Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Assignee_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Assignee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Assignee_Type__c</fullName>
        <label>Step Assignee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Matrix</fullName>
                </value>
                <value>
                    <fullName>Rule</fullName>
                </value>
                <value>
                    <fullName>Subprocess</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Custom Queue</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Custom Role</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Related User</fullName>
                </value>
                <value>
                    <fullName>Custom User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Assignee__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Assignee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Auto_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step Auto Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Filter_BoolOper__c</fullName>
        <description>The step filter boolean operator</description>
        <label>Step Filter Boolean Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                    <default>true</default>
                    <label>AND</label>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Filter_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Filter Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Filter_Comparison_Type__c</fullName>
        <label>Step Filter Comparison Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Filter_Field_Number__c</fullName>
        <label>Step Filter Field Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Filter_Field_Object_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Filter Field Object Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Filter_Field_Object__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Filter Field Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Filter_Field_Value_Object_Source__c</fullName>
        <description>The source of the field value object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Filter Field Value Object Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Filter_Field_Value_Object__c</fullName>
        <description>The object which contains the field value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Filter Field Value Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Filter_Field_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Filter Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Filter_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step Filter</label>
        <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
        <relationshipLabel>Step Filters</relationshipLabel>
        <relationshipName>Step_Filter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group_Action_Field_Name_Source__c</fullName>
        <label>Step Group Action Field Name Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                    <default>true</default>
                    <label>Self</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group_Action_Field_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Group Action Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group_Action_Field_Update_Type__c</fullName>
        <label>Step Group Action Field Update Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Update (Constant)</fullName>
                </value>
                <value>
                    <fullName>Field Update (Field)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group_Action_Field_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Group Action Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group_Action_Type__c</fullName>
        <label>Step Group Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step Group Action</label>
        <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
        <relationshipLabel>Step Group Actions</relationshipLabel>
        <relationshipName>Step_Group_Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Step Group Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group_Rejection_Action__c</fullName>
        <label>Step Group Rejection Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Group Rejection</fullName>
                </value>
                <value>
                    <fullName>Final Rejection</fullName>
                </value>
                <value>
                    <fullName>Group &amp; Final Rejection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group_Seq_Number__c</fullName>
        <label>Step Group Seq #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step Group</label>
        <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
        <relationshipLabel>Step Groups</relationshipLabel>
        <relationshipName>Step_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Hierarchy_Driver__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Hierarchy Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Step Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Notify_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the approver receives only a notification for the approval request (when set to true) or gets the request assigned to them in addition to receiving a notification (when set to false, which is the default).</description>
        <inlineHelpText>Indicates whether the approver receives only a notification for the approval request (when set to true) or gets the request assigned to them in addition to receiving a notification (when set to false, which is the default).</inlineHelpText>
        <label>Step Notify Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step_Seq_Number__c</fullName>
        <label>Step Seq #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
        <relationshipLabel>Steps</relationshipLabel>
        <relationshipName>Step</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionComment1Label__c</fullName>
        <description>Enter the name of a custom label containing text that will be used as the label when entering a process comment or the first of up to three comments at the step level.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the name of a custom label containing text that will be used as the label when entering a process comment or the first of up to three comments at the step level.</inlineHelpText>
        <label>Submission Comment 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionComment2Label__c</fullName>
        <description>Enter the name of a custom label containing text that will be used as the label when entering a second comment at the step level.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the name of a custom label containing text that will be used as the label when entering a second comment at the step level.</inlineHelpText>
        <label>Submission Comment 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionComment3Label__c</fullName>
        <description>Enter the name of a custom label containing text that will be used as the label when entering a third comment at the step level.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the name of a custom label containing text that will be used as the label when entering a third comment at the step level.</inlineHelpText>
        <label>Submission Comment 3 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionCommentsEnabledCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Keeps track of the number of steps in the process that have one or more submission comments enabled for that step.</description>
        <inlineHelpText>Keeps track of the number of steps in the process that have one or more submission comments enabled for that step.</inlineHelpText>
        <label>Submission Comments Enabled Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionCommentsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this flag to enable submission comments for this process at either the process or step level.  When enabled, the user will be prompted to enter submission comments when the request is submitted for approval.</description>
        <inlineHelpText>Set this flag to enable submission comments for this process at either the process or step level.  When enabled, the user will be prompted to enter submission comments when the request is submitted for approval.</inlineHelpText>
        <label>Submission Comments Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionCommentsMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this flag to make submission comments mandatory for this process at the process level. When set, the user will be forced to enter submission comments when the request is submitted for approval.</description>
        <inlineHelpText>Set this flag to make submission comments mandatory for this process at the process level. When set, the user will be forced to enter submission comments when the request is submitted for approval.</inlineHelpText>
        <label>Submission Comments Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionCommentsPerStep__c</fullName>
        <description>Select the number of submission comments allowed per step (up to three) when step level comments are enabled.  This value defaults to one whenever process level comments are used since there can only be a single submission comment at the process level.</description>
        <inlineHelpText>Select the number of submission comments allowed per step (up to three) when step level comments are enabled.  This value defaults to one whenever process level comments are used since there can only be a single submission comment at the process level.</inlineHelpText>
        <label>Submission Comments Per Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__SubmissionCommentsType__c</fullName>
        <description>Select the type of submission comments that can be entered for this process.  For process level comments, only a single comment can be entered.  For step level comments, up to three comments can be entered for each step.</description>
        <inlineHelpText>Select the type of submission comments that can be entered for this process.  For process level comments, only a single comment can be entered.  For step level comments, up to three comments can be entered for each step.</inlineHelpText>
        <label>Submission Comments Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Process</fullName>
                    <default>true</default>
                    <label>Process</label>
                </value>
                <value>
                    <fullName>Step</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approval Process</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Active__c</columns>
        <columns>Apttus_Approval__Process_Name__c</columns>
        <columns>Apttus_Approval__Object_Label__c</columns>
        <columns>Apttus_Approval__Object_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apttus_Approval__ApprovalProcesses</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Active__c</columns>
        <columns>Apttus_Approval__Sequence__c</columns>
        <columns>Apttus_Approval__Process_Name__c</columns>
        <columns>Apttus_Approval__Object_Label__c</columns>
        <columns>Apttus_Approval__Object_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Apttus_Approval__Approval_Process__c.Apttus_Approval__ApprovalProcess</value>
        </filters>
        <filters>
            <field>Apttus_Approval__Process_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Approval Processes</label>
    </listViews>
    <listViews>
        <fullName>Apttus_Approval__EntryCriteria</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Entry_Criteria__c</columns>
        <columns>Apttus_Approval__Entry_Criteria_Field__c</columns>
        <columns>Apttus_Approval__Entry_Criteria_Comparison_Type__c</columns>
        <columns>Apttus_Approval__Entry_Criteria_Field_Value__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Apttus_Approval__Approval_Process__c.Apttus_Approval__EntryCriteria</value>
        </filters>
        <label>Entry Criteria</label>
    </listViews>
    <listViews>
        <fullName>Apttus_Approval__FinalActions</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Final_Approval_Action__c</columns>
        <columns>Apttus_Approval__Final_Action_Type__c</columns>
        <columns>Apttus_Approval__Final_Action_Field_Name__c</columns>
        <columns>Apttus_Approval__Final_Action_Field_Update_Type__c</columns>
        <columns>Apttus_Approval__Final_Action_Field_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Apttus_Approval__Approval_Process__c.Apttus_Approval__FinalAction</value>
        </filters>
        <label>Final Actions</label>
    </listViews>
    <listViews>
        <fullName>Apttus_Approval__InitialSubmissionActions</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Initial_Submission_Action__c</columns>
        <columns>Apttus_Approval__Initial_Submission_Field_Name__c</columns>
        <columns>Apttus_Approval__Initial_Submission_Action_Type__c</columns>
        <columns>Apttus_Approval__Initial_Submission_Field_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Apttus_Approval__Approval_Process__c.Apttus_Approval__InitialSubmissionAction</value>
        </filters>
        <label>Initial Submission Actions</label>
    </listViews>
    <listViews>
        <fullName>Apttus_Approval__StepFilterCriteria</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Step_Filter__c</columns>
        <columns>Apttus_Approval__Step_Filter_Field__c</columns>
        <columns>Apttus_Approval__Step_Filter_Comparison_Type__c</columns>
        <columns>Apttus_Approval__Step_Filter_Field_Object__c</columns>
        <columns>Apttus_Approval__Step_Filter_Field_Value__c</columns>
        <columns>Apttus_Approval__Step_Filter_Field_Object_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Apttus_Approval__Approval_Process__c.Apttus_Approval__StepFilterCriteria</value>
        </filters>
        <label>Step Filter Criteria</label>
    </listViews>
    <listViews>
        <fullName>Apttus_Approval__StepGroupAction</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__Step_Group_Action__c</columns>
        <columns>Apttus_Approval__Step_Group_Action_Field_Name__c</columns>
        <columns>Apttus_Approval__Step_Group_Action_Field_Update_Type__c</columns>
        <columns>Apttus_Approval__Step_Group_Action_Field_Value__c</columns>
        <columns>Apttus_Approval__Step_Group_Action_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Apttus_Approval__Approval_Process__c.Apttus_Approval__StepGroupAction</value>
        </filters>
        <label>Step Group Action</label>
    </listViews>
</CustomObject>